--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .card{
-    background-color:hsl(120, 75%, 41%);
+    background-color:gray;
     border: 5px solid yellowgreen;
     border-radius: 10px;
     margin: 0 auto;
@@ -24,4 +24,6 @@
 img{
     width:50%;
     height:50%;
+    margin: 0 auto;
+    padding: 0
 }
